11-30-2024:
- Added ability to have banner image and footer image.
- Added top button to mobile layout.

11-28-2024:
- Fixed color CSS.
- Improved mobile layout, including bigger text.

11-26-2024:
- Continued improvements to mobile layout.
- Improved color scheme for light mode for contrast.

11-25-2024:
- Started improving mobile layout.
- Fixing sidebar in mobile layout.

11-24-2024:
- Fixed a few link bugs.
- Fixed search again.
- Completed two demos.

11-21-2024:
- Fixed some bugs with links not working correctly.

11-18-2024:
- Minor blog re-arrangements.
- Cleaned up output for search.

9-16-2024:
- Added date feature to blog.

9-15-2024:
- Improved search screen UI.
- Added blog generation.
- Allowed sorting of blog posts by tag, topic and about-author
- Added reduced motion.
- Added light/dark mode based on OS.

9-14-2024:
- Removed Github button.
- Major CSS changes to desktop site.
- Started adding demo content.
- Minor modifications to styling of footer and sidebar to enable new functionality, such as displaying a sidebar with no collapsable navigation.
- Added photo to sidebar.
- Added the following sidebars: home
- Added tag generation.
- Added posts list.

Original Project: https://github.com/amzn/jekyll-doc-project/tree/master 