@@ -119,6 +119,19 @@
             $(".collapsable").collapse('hide');
             window.location.href='#';
         }
+        
+        function openSidebar() {
+            const isExpanded = $(".mydocsidebar").attr('aria-expanded');
+            if(isExpanded == 'true')
+            {
+                $(".mydocsidebar").collapse('hide');
+            }
+            else
+            {
+                $(".mydocsidebar").collapse('show');
+                window.location.href='#';
+            }
+        }
     </script>
 
     <!-- User defined js -->
@@ -149,7 +162,7 @@
                 </button>
                 
                 {% unless page.sidebar == null %}
-                <button type="button" class="navbar-toggle toggle-sidebar-button" data-toggle="collapse" data-target=".mydocsidebar" aria-label="Show Sidebar">
+                <button type="button" class="navbar-toggle toggle-sidebar-button" onclick="openSidebar();" aria-label="Show Sidebar">
                     <span class="sidebarToggle fa fa-book fa-2x"></span>
                 </button>
                 
