@@ -1,6 +1,9 @@
+12-01-2024:
+- Added top button to mobile layout.
+- Made it so sidebar view on mobile layout would go to the top of the page when pressed.
+
 11-30-2024:
 - Added ability to have banner image and footer image.
-- Added top button to mobile layout.
 
 11-28-2024:
 - Fixed color CSS.
